# pxls-canvas-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/: palette.json
src/: PxlsCanvas.cpp  PxlsCanvas.h  PxlsLogDB.cpp  PxlsLogDB.h  PxlsOverlay.cpp  PxlsOverlay.h  main.cpp
